Configured request security details before UI creation