@@ -10,12 +10,14 @@
 
 package com.vaadin.testbench.unit;
 
-import java.util.Collections;
+import java.util.Set;
 
+import org.junit.jupiter.api.AfterEach;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.extension.ExtendWith;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.context.ApplicationContext;
+import org.springframework.test.context.ContextConfiguration;
 import org.springframework.test.context.junit.jupiter.SpringExtension;
 
 import com.vaadin.flow.component.UI;
@@ -54,17 +56,25 @@ import com.vaadin.testbench.unit.mocks.MockSpringServlet;
  * </pre>
  */
 @ExtendWith({ SpringExtension.class })
+@ContextConfiguration(classes = SpringSupport.class)
 public abstract class SpringUIUnitTest extends UIUnitTest {
 
     @Autowired
-    private ApplicationContext springContext;
+    private ApplicationContext applicationContext;
 
     @BeforeEach
     protected void initVaadinEnvironment() {
+        TestSpringLookupInitializer.setApplicationContext(applicationContext);
         MockSpringServlet servlet = new MockSpringServlet(
-                discoverRoutes(scanPackage()), springContext, UI::new);
-        MockVaadin.setup(UI::new, servlet, Collections.emptySet());
-        MockSpringServlet.applySpringSecurityIfPresent();
+                discoverRoutes(scanPackage()), applicationContext, UI::new);
+        MockVaadin.setup(UI::new, servlet,
+                Set.of(TestSpringLookupInitializer.class));
     }
 
+    @AfterEach
+    protected void cleanVaadinEnvironment() {
+        // Ensure ThreadLocal is cleaned
+        TestSpringLookupInitializer.setApplicationContext(null);
+        super.cleanVaadinEnvironment();
+    }
 }
